[IMP] account_payment_mode_auto_reconcile: Allows to reconcile with same payment mode

--- a/account_payment_mode_auto_reconcile/views/account_payment_mode.xml
+++ b/account_payment_mode_auto_reconcile/views/account_payment_mode.xml
@@ -19,6 +19,10 @@
                         name="auto_reconcile_same_journal"
                         attrs="{'invisible': [('auto_reconcile_outstanding_credits', '=', False)]}"
                     />
+                    <field
+                        name="auto_reconcile_same_payment_mode"
+                        attrs="{'invisible': [('auto_reconcile_outstanding_credits', '=', False)]}"
+                    />
                 </group>
             </group>
         </field>
